test/netlist/error/any-output.bop
A() = _
where
end where;
